test/errors/type/collections/set/remove.yasl
const x = collections.set(); collections.set().remove([], 1)
