test/errors/type/collections/set/remove.yasl.err
TypeError: collections.set.remove expected arg in position 0 to be of type set, got arg of type list. (line 1)
